# bytcoins-wallet

./: CMakeLists.txt  CryptoNoteWallet.cmake  README.md
src/: WalletAdapter.cpp
src/gui/: MainWindow.cpp  SendFrame.h
src/gui/ui/: aboutdialog.ui  addressbookdialog.ui  addressbookframe.ui  changepassworddialog.ui  exitwidget.ui  mainwindow.ui  newaddressdialog.ui  newpassworddialog.ui  overviewframe.ui  passworddialog.ui  receiveframe.ui  sendframe.ui  transactiondetailsdialog.ui  transactionframe.ui  transactionsframe.ui  transferframe.ui
src/images/: cryptonote.icns
